# converta

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  eval-regression.yml  retrain.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: dependencies.py  main.py
api/routers/: eval.py  experiments.py  health.py  messages.py
data/golden_datasets/: classifier_golden.jsonl  eval_golden.jsonl
data/schemas/: config.py  models.py  pydantic_models.py
docs/: architecture.md
docs/runbooks/: classifier_pass_rate_drop.md  conversion_rate_drop.md  drift_detected.md  high_latency.md
features/feature_repo/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
features/pipelines/: batch_features.py  validation.py
infra/docker/: Dockerfile  docker-compose.yml  prometheus.yml
infra/docker/grafana/dashboards/: experiments.json  model_quality.json  system_health.json
infra/terraform/: iam.tf  main.tf  security_groups.tf  variables.tf
prompt-templates/: length_v1.0.0.yaml  personalization_v1.0.0.yaml  tone_v1.0.0.yaml  urgency_v1.0.0.yaml
services/: celery_app.py
services/classifier/: features.py  inference.py  model.py
services/evaluation/: human_eval.py  llm_judge.py  metrics.py  pipeline.py
services/experiments/: analysis.py  assignment.py  stats.py
services/generation/: guardrails.py  prompt_registry.py  rewriter.py
services/monitoring/: alerts.py  drift.py  metrics.py  reports.py
static/: dashboard.html
tests/regression/: test_golden_eval.py
tests/unit/: test_assignment.py  test_drift.py  test_feature_validation.py  test_guardrails.py  test_metrics.py  test_stats.py
training/: evaluate_model.py  train_classifier.py
