[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "converta"
version = "0.1.0"
description = "LLM Message Optimization Platform for loan application conversion"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Cache / Queue
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    # LLM / Prompt
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    # ML / Data Science
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    # NLP / Embeddings
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "spacy>=3.7.0",
    "vaderSentiment>=3.3.2",
    "textstat>=0.7.0",
    # Evaluation Metrics
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    # Feature Store
    "feast>=0.38.0",
    # Experiment Tracking
    "mlflow>=2.13.0",
    # Data Validation
    "great-expectations>=0.18.0",
    # Monitoring
    "prometheus-client>=0.20.0",
    # Config / Secrets
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0.1",
    # PDF / Reports
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
